...
        VStack(alignment: .leading) {
          HStack {
            Text("回合列表").font(.headline)
            Spacer()
            Button(state.custom.allSatisfy(\.selected) ? "取消全选" : "全选") {
              state.setAllCustomSelected(!state.custom.allSatisfy(\.selected))
            }.disabled(state.custom.isEmpty).accessibilityIdentifier("toggleAllRallies")
          }.padding(.horizontal, 12)
          List {
            ForEach(state.custom) { clip in
              HStack(alignment: .top) {
                Toggle(
                  "",
...
